[gd_scene load_steps=20 format=2]

[ext_resource path="res://code/main.gd" type="Script" id=1]
[ext_resource path="res://imag/CardsTree.jpg" type="Texture" id=2]
[ext_resource path="res://imag/BG/Paint.jpg" type="Texture" id=3]
[ext_resource path="res://imag/CardsNovos/Arrecadacao.jpg" type="Texture" id=4]
[ext_resource path="res://imag/CardsNovos/24.png" type="Texture" id=5]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_03.png" type="Texture" id=6]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_04.png" type="Texture" id=7]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_01.png" type="Texture" id=8]
[ext_resource path="res://imag/Constituica.png" type="Texture" id=9]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_02.png" type="Texture" id=10]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_05.png" type="Texture" id=11]
[ext_resource path="res://imag/Main/Papel.png" type="Texture" id=12]
[ext_resource path="res://imag/Component 6.png" type="Texture" id=13]
[ext_resource path="res://font/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://imag/prohibited-g4bbe80054_640.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "mensagem",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 17
outline_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro_emenda"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Chamadas" type="Sprite" parent="."]
visible = false
position = Vector2( 508, 281 )
scale = Vector2( 0.952077, 0.952077 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4

[node name="BG" type="Sprite" parent="."]
position = Vector2( 514, 300.312 )
z_index = -1
texture = ExtResource( 3 )

[node name="Importante_02" type="Sprite" parent="."]
visible = false
position = Vector2( 499.5, 280.5 )
scale = Vector2( 1.15968, 1.1675 )
texture = ExtResource( 5 )

[node name="Consulta_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 509, 288 )
scale = Vector2( 0.701942, 0.690965 )
texture = ExtResource( 9 )

[node name="BTN" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Papel" type="Sprite" parent="BTN"]
position = Vector2( 617, 464 )
z_index = -1
texture = ExtResource( 12 )
hframes = 5
frame = 4

[node name="PapelArea" type="Control" parent="BTN/Papel"]
anchor_left = 0.057
anchor_top = 0.142
anchor_right = 0.905
anchor_bottom = 0.858
margin_left = -39.503
margin_top = -47.49
margin_right = -39.495
margin_bottom = -47.51
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tablet2" type="AnimatedSprite" parent="BTN"]
position = Vector2( 365.75, 485.5 )
scale = Vector2( 0.954545, 0.954545 )
z_index = -1
frames = SubResource( 1 )
animation = "mensagem"

[node name="TabletArea" type="Control" parent="BTN/Tablet2"]
anchor_left = 0.015
anchor_top = 0.273
anchor_right = 0.955
anchor_bottom = 0.844
margin_left = -49.485
margin_top = -33.018
margin_right = -49.545
margin_bottom = -36.704
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aumentar" type="Button" parent="BTN"]
visible = false
anchor_left = 0.274
anchor_top = 0.736
anchor_right = 0.415
anchor_bottom = 0.821
margin_left = 0.424011
margin_top = -0.127991
margin_right = -131.96
margin_bottom = 14.042
rect_scale = Vector2( 11.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vender" type="Button" parent="BTN"]
visible = false
anchor_left = 0.537
anchor_top = 0.732
anchor_right = 0.677
anchor_bottom = 0.818
margin_left = 0.112
margin_top = 0.263977
margin_right = -131.248
margin_bottom = -0.164001
rect_scale = Vector2( 11.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Positivo" type="Button" parent="BTN"]
anchor_left = 0.377
anchor_top = 0.875
anchor_right = 0.446
anchor_bottom = 0.908
margin_left = -0.0480042
margin_top = -0.250122
margin_right = 0.29599
margin_bottom = 0.0159912
text = "Concorda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negativo" type="Button" parent="BTN"]
anchor_left = 0.542
anchor_top = 0.891
anchor_right = 0.613
anchor_bottom = 0.891
margin_left = -0.00805664
margin_top = -9.81799
margin_right = 0.287964
margin_bottom = 10.182
text = "Discordar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consulta" type="Button" parent="BTN"]
anchor_left = 0.044
anchor_top = 0.779
anchor_right = 0.114
anchor_bottom = 0.813
margin_left = -0.0560036
margin_top = 0.157959
margin_right = 0.263992
margin_bottom = -0.174011
text = "Consultar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proximo" type="Button" parent="BTN"]
margin_left = 469.0
margin_top = 477.0
margin_right = 673.0
margin_bottom = 528.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BTN"]
position = Vector2( 391, 411 )
z_index = -2

[node name="Button" type="Button" parent="BTN/Sprite"]
margin_right = 192.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Importante_01" type="Sprite" parent="."]
visible = false
position = Vector2( 500, 279.4 )
scale = Vector2( 1.16, 1.16 )
texture = ExtResource( 4 )
hframes = 2

[node name="SaibaMais" type="Control" parent="."]
margin_left = 410.0
margin_top = 280.0
margin_right = 588.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Importante_03" type="Sprite" parent="."]
visible = false
position = Vector2( 479, 363 )
scale = Vector2( 1.56758, 1.56758 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Importante_03"]
modulate = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
anchor_left = 0.263
anchor_top = 0.394
anchor_right = 0.952
anchor_bottom = 0.644
margin_left = -336.217
margin_top = -211.317
margin_right = -335.225
margin_bottom = -212.067
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Importante_03"]
anims/RESET = SubResource( 2 )
anims/intro_emenda = SubResource( 3 )

[node name="proibido" type="Sprite" parent="."]
position = Vector2( 321, 429 )
scale = Vector2( 0.061328, 0.061328 )
texture = ExtResource( 15 )

[connection signal="mouse_entered" from="BTN/Papel/PapelArea" to="." method="_on_PapelArea_mouse_entered"]
[connection signal="mouse_entered" from="BTN/Tablet2/TabletArea" to="." method="_on_Tablet_mouse_entered"]
[connection signal="pressed" from="BTN/Aumentar" to="." method="_on_Aumentar_pressed"]
[connection signal="pressed" from="BTN/Vender" to="." method="_on_Vender_pressed"]
[connection signal="button_up" from="BTN/Positivo" to="." method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="." method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Consulta" to="." method="_on_Consulta_button_up"]
[connection signal="pressed" from="BTN/proximo" to="." method="_on_proximo_pressed"]
[connection signal="pressed" from="BTN/Sprite/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="SaibaMais" to="." method="_on_SaibaMais_mouse_entered"]
[connection signal="mouse_exited" from="SaibaMais" to="." method="_on_SaibaMais_mouse_exited"]
